--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import "./components/header/header.scss";
+@import "./components/hover-container/hoverContainer.scss";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,8 +9,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+html, body, #root, .wrapper {
+  height: 100%;
+}
+* {
+  box-sizing: border-box;
+}
+.pnlm-container {
+  height: 100% !important;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.classRoom {
+  height: 100%;
+  display: flex;
+  position: relative;
 }
