--- a/src/components/hover-container/hoverContainer.scss
+++ b/src/components/hover-container/hoverContainer.scss
@@ -1,13 +1,43 @@
 .hoverContainer {
     display: flex;
     border-radius: 5px;
-    border: 1px solid black;
+    border: 2px solid black;
     position: relative;
+    // width: 100px;
+    padding: 1px 10px;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    margin: 5px 0 ;
+    &:hover {
+        .hoverMenu {
+            opacity: 1 !important;
+            pointer-events: all !important;
+        }
+    }
     .hoverMenu {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        justify-content: center;
+        align-items: center;
+        pointer-events: none;
+        
+        opacity: 0;
+        position: absolute;
+        
+        top: 100%;
+        left: 0;
+        right: 0;
+        transition: .2s;
+        background-color: #fff;
+        border: 1px solid black;
         .hoverMenuItem {
+            display: flex;
+            align-items: center;
+            border-radius: 5px;
+            border-bottom: 1px solid black;
+            width: 100%;
+            height: 100%;
             padding: 2px 5px;
             border-bottom: 1px solid black;
         }
