Пока конфликты есть

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,3 +31,8 @@ html, body, #root, .wrapper {
   display: flex;
   position: relative;
 }
+.redBox {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+}
