--- a/src/components/hover-container/hoverContainer.scss
+++ b/src/components/hover-container/hoverContainer.scss
@@ -1,45 +1,57 @@
+.hovverTemplate {
+    position: relative;
+}
 .hoverContainer {
     display: flex;
     border-radius: 5px;
     border: 2px solid black;
     position: relative;
     // width: 100px;
-    padding: 1px 10px;
+    padding: 8px 15px;
     justify-content: center;
     align-items: center;
     user-select: none;
     margin: 5px 0 ;
     &:hover {
-        .hoverMenu {
+        &~.hoverMenu {
             opacity: 1 !important;
             pointer-events: all !important;
         }
     }
-    .hoverMenu {
+}
+.hoverMenu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+    
+    opacity: 0;
+    position: absolute;
+    
+    top: 46px;
+    left: 0;
+    right: 0;
+    transition: .2s;
+    background-color: #fff;
+    &:hover {
+        opacity: 1 !important;
+        pointer-events: all !important;
+    }
+    // border: 1px solid black;
+    .hoverMenuItem {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
-        pointer-events: none;
-        
-        opacity: 0;
-        position: absolute;
-        
-        top: 100%;
-        left: 0;
-        right: 0;
-        transition: .2s;
-        background-color: #fff;
+        border-radius: 0 0 5px 5px;
+        position: relative;
+        // top: -5px;
+        margin: -3px 0 0 ;
+        width: 100%;
+        height: 100%;
+        padding: 5px 15px;
         border: 1px solid black;
-        .hoverMenuItem {
-            display: flex;
-            align-items: center;
-            border-radius: 5px;
-            border-bottom: 1px solid black;
-            width: 100%;
-            height: 100%;
-            padding: 2px 5px;
-            border-bottom: 1px solid black;
-        }
+        border-top: none;
+        cursor: pointer;
+        user-select: none;
     }
 }
