--- a/src/components/hover-container/hoverContainer.scss
+++ b/src/components/hover-container/hoverContainer.scss
@@ -48,10 +48,17 @@
         margin: -3px 0 0 ;
         width: 100%;
         height: 100%;
-        padding: 5px 15px;
+        padding: 7px 15px;
         border: 1px solid black;
-        border-top: none;
+        // border-top: none;
         cursor: pointer;
         user-select: none;
+        background-color: #fff;
+        transition: all .3s;
+        &:hover {
+            border-radius: 5px;
+            z-index: 1;
+            transform: scale(1.05);
+        }
     }
 }
