--- a/src/components/hover-container/hoverContainer.scss
+++ b/src/components/hover-container/hoverContainer.scss
@@ -1,10 +1,11 @@
+@import "../../style/vars.scss";
 .hovverTemplate {
     position: relative;
 }
 .hoverContainer {
     display: flex;
     border-radius: 5px;
-    border: 2px solid black;
+    border: 2px solid $back;
     position: relative;
     // width: 100px;
     padding: 8px 15px;
@@ -18,6 +19,7 @@
             pointer-events: all !important;
         }
     }
+    font-weight: bold;
 }
 .hoverMenu {
     display: flex;
@@ -33,7 +35,7 @@
     left: 0;
     right: 0;
     transition: .2s;
-    background-color: #fff;
+    background-color: $back;
     &:hover {
         opacity: 1 !important;
         pointer-events: all !important;
@@ -49,11 +51,12 @@
         width: 100%;
         height: 100%;
         padding: 7px 15px;
-        border: 1px solid black;
+        border: 2px solid $main;
         // border-top: none;
         cursor: pointer;
         user-select: none;
-        background-color: #fff;
+        background-color: $back;
+        color: $main;
         transition: all .3s;
         &:hover {
             border-radius: 5px;
