--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-.nav{
+/* .nav {
   z-index: 1;
   position: absolute;
   right: 50px;
@@ -12,15 +12,15 @@
 
 }
 
-.title{
-  display:flex;
+.title {
+  display: flex;
   flex-direction: row;
   margin: 5px;
 }
 
-.closeButton{
-margin: 5px 10px 5px 0px;
-text-transform: uppercase;
-font-weight: bold;
-cursor: pointer;
-}
+.closeButton {
+  margin: 5px 10px 5px 0px;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+} */
