--- a/src/components/hover-container/hoverContainer.scss
+++ b/src/components/hover-container/hoverContainer.scss
@@ -9,13 +9,14 @@
     border-radius: 5px;
     border: 2px solid $back;
     position: relative;
-    // width: 100px;
     padding: 8px 15px;
     justify-content: center;
     align-items: center;
     user-select: none;
     margin: 5px 0;
-
+    &.htext {
+        text-align: center;
+    }
     &:hover {
         &~.hoverMenu {
             opacity: 1 !important;
