--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,6 +9,9 @@
     // border-bottom: 2px dotted black;
     background-color: $main;
     color: white;
+    position: relative;
+    z-index: 2;
+    border-bottom: 2px solid lightgray;
 }
 
 .hover {
