--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,9 @@ body,
 .pannellum_wrapper {
   height: 100%;
 }
-.pnlm-load-button {
-  display: none !important;
+// .pnlm-load-button {
+//   display: none !important;
+// }
+#PannellumId {
+  width: 100% !important;
 }
