Идея для информационного стенда

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,3 +47,9 @@ body,
 #PannellumId {
   width: 100% !important;
 }
+.pnlm-hotspot.pnlm-info {
+  cursor: pointer;
+}
+.info {
+  background-image: url(https://www.flaticon.com/ru/free-animated-icon/click_6416353?related_id=6416353);
+}
