Информация о стенде первая версия

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,6 +50,35 @@ body,
 .pnlm-hotspot.pnlm-info {
   cursor: pointer;
 }
-.info {
-  background-image: url(https://www.flaticon.com/ru/free-animated-icon/click_6416353?related_id=6416353);
+// .info {
+//   background-image: url(https://www.flaticon.com/ru/free-animated-icon/click_6416353?related_id=6416353);
+// }
+.backdrop {
+  position: fixed;
+  top: 0;bottom: 0;right: 0;left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: flex;justify-content: center;align-items: center;
+  z-index: 3;
+}
+.modalPnlm {
+  display: flex;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  max-height: 90%;
+  max-width: 90%;
+  .mimages {
+    max-height: 100%;
+    max-width: 50%;
+    img {
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
+  // .mimages {
+
+  // }
+  // .mtext {
+
+  // }
 }
