--- a/src/index.scss
+++ b/src/index.scss
@@ -73,7 +73,7 @@ body,
 .modalPnlm {
   display: flex;
   padding: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.75);
   color: white;
   border-radius: 5px;
   max-height: 90%;
@@ -105,6 +105,7 @@ body,
 
 .infoBottom {
   position: absolute;
+  // bottom: 50%;
   bottom: 0;
   left: 50%;
   height: auto;
