--- a/src/index.scss
+++ b/src/index.scss
@@ -115,3 +115,15 @@ body,
   border-radius: 5px 5px 0 0;
   padding: 10px;
 }
+.icon_info {
+  transition: .2s;
+  cursor: pointer;
+  img {
+
+    height: 25px;
+    width: 25px;
+  }
+  &:hover {
+    transform: scale(1.1);
+  }
+}
