--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 }
-
+h1,h2,h3,h4,h5,h6 {
+  margin-top: 5px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -108,22 +110,44 @@ body,
   // bottom: 50%;
   bottom: 0;
   left: 50%;
-  height: auto;
+  // height: auto;
   transform: translateX(-50%);
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   border-radius: 5px 5px 0 0;
   padding: 10px;
+  max-width: 80%;
+  max-height: 50%;
+  display: flex;
+  .headerIB {
+    // margin: 0 10px 0 0;
+    justify-content: space-between;
+    // align-items: center;
+  }
+  .info {
+    overflow: auto;
+  }
+  .close {
+    // position: absolute;
+    // top: 10px;right: 30px;
+    margin: 8px 10px 0;
+    img {
+      height: 15px;
+      width: 15px;
+    }
+  }
 }
 .icon_info {
-  transition: .2s;
+  transition: .1s;
   cursor: pointer;
   img {
-
     height: 25px;
     width: 25px;
   }
   &:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
+}
+.flex {
+  display: flex;
 }
