--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "./components/header/header.scss";
 @import "./components/hover-container/hoverContainer.scss";
+@import "./components/pannellum-all.scss";
 
 body {
   margin: 0;
@@ -72,95 +73,6 @@ body,
   z-index: 3;
 }
 
-.modalPnlm {
-  display: flex;
-  padding: 10px;
-  background-color: rgba(0, 0, 0, 0.75);
-  color: white;
-  border-radius: 5px;
-  max-height: 90%;
-  max-width: 90%;
-
-  img {
-    // max-height: 100%;
-    max-width: 45%;
-    float: left;
-  }
-
-  // .mimages {
-  //   max-height: 100%;
-  //   max-width: 50%;
-  // }
-  .mtext {
-    width: 100%;
-    padding: 0 0 0 15px;
-    overflow: auto;
-  }
-
-  // .mimages {
-
-  // }
-  // .mtext {
-
-  // }
-}
-
-.infoBottom {
-  position: absolute;
-  // bottom: 50%;
-  bottom: 0;
-  left: 50%;
-  // height: auto;
-  transform: translateX(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  border-radius: 5px 5px 0 0;
-  padding: 10px;
-  max-width: 80%;
-  max-height: 50%;
-  display: flex;
-  .headerIB {
-    // margin: 0 10px 0 0;
-    justify-content: space-between;
-    // align-items: center;
-  }
-  .info {
-    overflow: auto;
-  }
-  .close {
-    // position: absolute;
-    // top: 10px;right: 30px;
-    margin: 8px 10px 0;
-    img {
-      height: 15px;
-      width: 15px;
-    }
-  }
-}
-.icon_info {
-  transition: .1s;
-  cursor: pointer;
-  img {
-    height: 25px;
-    width: 25px;
-  }
-  &:hover {
-    transform: scale(1.05);
-  }
-}
 .flex {
   display: flex;
-}
-.hotspotCustom {
-  $in: 20px;
-  $out: 40px;
-  .in {
-    height: $in !important;width: $in !important;
-  }
-  .out {
-    width: $out !important;height: $out !important;
-  }
-//   &:hover {
-
-//   }
 }
