--- a/src/components/pannellum-all.scss
+++ b/src/components/pannellum-all.scss
@@ -107,18 +107,30 @@
 
 .modalPnlm {
     display: flex;
-    padding: 10px;
+    padding: 10px 0;
     background-color: rgba(0, 0, 0, 0.75);
     color: white;
     border-radius: 5px;
     max-height: 90%;
     max-width: 90%;
+    overflow: auto;
 
-    img {
-        // max-height: 100%;
-        max-width: 45%;
-        float: left;
+    .container {
+        display: flex;
+        overflow: auto;
+        // flex-direction: column;
     }
+    .left, .right {
+        width: 50%;
+        padding: 0 1%;
+        // overflow: auto;
+    }
+
+    // img {
+        // max-height: 100%;
+        // max-width: 45%;
+        // float: left;
+    // }
 
     // .mimages {
     //   max-height: 100%;
@@ -128,5 +140,18 @@
         width: 100%;
         padding: 0 0 0 15px;
         overflow: auto;
+    }
+}
+@media (max-width: 768px) {
+    .modalPnlm {
+        padding: 0;
+        .container {
+            flex-direction: column;
+        }
+        .left, .right {
+            width: 100%;
+            max-width: 100%;
+            padding: 5px;
+        }
     }
 }
