--- a/src/components/pannellum-all.scss
+++ b/src/components/pannellum-all.scss
@@ -123,7 +123,7 @@
     .left, .right {
         width: 50%;
         padding: 0 1%;
-        // overflow: auto;
+        overflow: auto;
     }
 
     // img {
@@ -147,8 +147,11 @@
         padding: 0;
         .container {
             flex-direction: column;
+            
         }
         .left, .right {
+            overflow: visible;
+            // max-height: 50%;
             width: 100%;
             max-width: 100%;
             padding: 5px;
