--- a/src/components/pannellum-all.scss
+++ b/src/components/pannellum-all.scss
@@ -120,6 +120,9 @@
         overflow: auto;
         width: 100%;
         // flex-direction: column;
+        &.book {
+            flex-direction: column;
+        }
         &.only_image {
             height: 100%;
         }
